--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fs-extra": "0.30.0",
     "ghost-gql": "0.0.4",
     "glob": "5.0.15",
+    "graceful-fs": "^4.1.4",
     "html-to-text": "2.1.0",
     "intl": "1.1.0",
     "intl-messageformat": "1.3.0",
@@ -64,7 +65,7 @@
     "rss": "1.2.1",
     "semver": "5.1.0",
     "showdown-ghost": "0.3.6",
-    "sqlite3": "3.1.3",
+    "sqlite3": "https://registry.npmjs.org/sqlite3/-/sqlite3-3.1.3.tgz",
     "unidecode": "0.1.8",
     "validator": "5.2.0",
     "xml": "1.0.1"
