--- a/package.json
+++ b/package.json
@@ -75,15 +75,19 @@
     "pg": "4.1.1"
   },
   "devDependencies": {
+    "bootstrap-sass": "^3.3.6",
     "bower": "1.4.1",
     "csscomb": "3.1.8",
+    "foundation-sites": "^6.2.3",
     "grunt": "1.0.1",
     "grunt-bg-shell": "2.3.3",
     "grunt-cli": "1.2.0",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-compress": "1.2.0",
     "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-jshint": "1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "1.0.1",
     "grunt-contrib-watch": "1.0.0",
     "grunt-docker": "0.0.11",
