--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "ghost",
-  "version": "0.8.0",
-  "description": "Just a blogging platform.",
-  "author": "Ghost Foundation",
-  "homepage": "http://ghost.org",
+  "name": "giantleaps",
+  "version": "0.1.1",
+  "description": "Giant Leaps Website based on Ghost.",
+  "author": "Giant Leaps HMFT",
   "keywords": [
     "ghost",
     "blog",
@@ -11,10 +10,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/TryGhost/Ghost.git"
+    "url": "git://github.com/jojogitu/Giant-Leaps-Website.git"
   },
-  "bugs": "https://github.com/TryGhost/Ghost/issues",
-  "contributors": "https://github.com/TryGhost/Ghost/graphs/contributors",
+  "bugs": "https://github.com/jojogitu/Giant-Leaps-Website/issues",
   "license": "MIT",
   "main": "./core/index",
   "scripts": {
@@ -41,7 +39,6 @@
     "express-hbs": "1.0.1",
     "extract-zip": "1.5.0",
     "fs-extra": "0.30.0",
-    "ghost-gql": "0.0.4",
     "glob": "5.0.15",
     "graceful-fs": "^4.1.4",
     "html-to-text": "2.1.0",
