--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "morgan": "1.7.0",
     "multer": "1.1.0",
     "netjet": "1.1.0",
-    "node-uuid": "1.4.7",
     "nodemailer": "0.7.1",
     "oauth2orize": "1.2.2",
     "passport": "0.3.2",
@@ -64,6 +63,7 @@
     "showdown-ghost": "0.3.6",
     "sqlite3": "https://registry.npmjs.org/sqlite3/-/sqlite3-3.1.3.tgz",
     "unidecode": "0.1.8",
+    "uuid": "^3.0.0",
     "validator": "5.2.0",
     "xml": "1.0.1"
   },
